# lid

./: .gitignore  CHANGELOG.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/: CLA.md  CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: ideas.md  q-and-a.md  show-and-tell.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  cla.yml  integration.yml  pages.yml  release.yml
Wikimedia Hackathon 2026/: README.md  mediawiki-program-page-session.wikitext  phabricator-T422252-description.md  uc-7-interwiki-resilience.md
Wikimedia Hackathon 2026/combined/: uc-7-interwiki-resilience.md  uc-8-wikipedia-llm-training.md
Wikimedia Hackathon 2026/linkid/: uc-3-cite-web-template.md  uc-4-reference-archival.md  uc-5-wikidata-identifiers.md
Wikimedia Hackathon 2026/linkmanager/: uc-1-link-rot-detection.md  uc-2-content-drift-alerting.md  uc-6-bot-assisted-migration.md
docs/: CONTRIBUTING.md  explainer.md  open-source.md
docs/hackathon-2026/: phabricator-T422252-description.md
docs/use-cases/: README.md
docs/use-cases/combined/: c-1-research-lifecycle.md  c-2-national-library.md  (+2 more)
draft/: draft-linkgenetic-linkid-uri-00.md
sdk/java/: README.md  pom.xml
sdk/js/: .eslintrc.js  README.md  jest.config.js  package.json  rollup.config.js  tsconfig.eslint.json  tsconfig.json
sdk/python/: README.md  client.py  linkid  pyproject.toml
sdk/python/linkid/: __init__.py  client.py  errors.py
sdk/python/tests/: test_client.py
spec/: index.html
(+25 files in other folders)
